# public-mirror-python-sdk

./: README.md  publish.sh  pyproject.toml
python/weflayr/: __init__.py  _core.py
python/weflayr/sdk/: helpers.py
python/weflayr/sdk/mistralai/: client.py
python/weflayr/sdk/openai/: client.py
tests/: test_helpers.py  test_instrument.py  test_mistralai_client.py  test_openai_client.py
