[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weflayr"
version = "0.1.0"
description = "Drop-in instrumented wrappers for AI clients with zero-overhead telemetry"
readme = "README.md"
license = { text = "Elastic-2.0" }
requires-python = ">=3.13"
authors = [
    { name = "Weflayr", email = "contact@weflayr.com" },
]
keywords = [
    "llm",
    "telemetry",
    "observability",
    "openai",
    "mistral",
    "instrumentation",
    "tracing",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://weflayr.com"
Documentation = "https://weflayr.com/docs"
Repository = "https://github.com/weflayr/weflayr"
"Bug Tracker" = "https://github.com/weflayr/weflayr/issues"

[project.optional-dependencies]
docs = ["pdoc"]
dev  = ["pytest", "pytest-cov"]

# "python/weflayr" — hatchling ships the package found at python/weflayr/
# and strips the "python/" prefix so it installs as top-level `weflayr`.
# Adding a react SDK later is just: packages = ["python/weflayr", ...]
[tool.pytest.ini_options]
addopts = "--cov=weflayr --cov-report=term-missing --cov-report=html:/tmp/weflayr-coverage"

[tool.hatch.build.targets.wheel]
packages = ["python/weflayr"]

[tool.hatch.build.targets.editable]
packages = ["python/weflayr"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "twine>=6.2.0",
]
